--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "project",
   "dependencies": {
-    "ember": "1.13.11",
+    "ember": "^2.0.0",
     "ember-cli-shims": "0.0.6",
     "ember-cli-test-loader": "0.2.1",
     "ember-data": "1.13.15",
@@ -12,7 +12,6 @@
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
     "jquery": "^1.11.3",
-    "bootstrap": "~3.3.5",
-    "jquery.formance": "~1.0.1"
+    "bootstrap": "~3.3.5"
   }
 }
